2013-02-10  Chong Yidong  <cyd@gnu.org>

	* mail/emacsbug.el (report-emacs-bug): Change binding of
	report-emacs-bug-insert-to-mailer to C-c M-i (Bug#13510).

2013-02-09  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-allow-units-as-numbers): New variable.
	* calc/calc-units.el (calc-convert-units): Use new variable.

2013-02-09  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (buffer-file-type, default-buffer-file-type): Remove.

	* net/ange-ftp.el (ange-ftp-insert-file-contents): Don't reference
	buffer-file-type.

	* mail/feedmail.el (feedmail-force-binary-write): Doc fix.
	(feedmail-run-the-queue, feedmail-dump-message-to-queue)
	(feedmail-send-it-immediately): Don't bind buffer-file-type, bind
	coding-system-for-write instead.

	* jka-compr.el (jka-compr-write-region): Don't bind
	buffer-file-type.

	* emacs-lisp/bytecomp.el (byte-compile-file): Don't bind
	buffer-file-type.

	* files.el (file-name-buffer-file-type-alist): Remove defvar.
	(insert-file-contents-literally): Remove reference to
	file-name-buffer-file-type-alist.

	* dos-w32.el (file-name-buffer-file-type-alist): Deprecate and
	make-obsolete.
	(find-buffer-file-type-match, find-buffer-file-type): Remove.
	(find-buffer-file-type-coding-system): Remove references to
	find-buffer-file-type-match, find-buffer-file-type, and
	buffer-file-type.
	Don't put find-buffer-file-type-coding-system into
	file-coding-system-alist.
	(find-file-binary, find-file-text): Bind coding-system-for-read
	instead of file-name-buffer-file-type-alist.

2013-02-09  Jambunathan K  <kjambunathan@gmail.com>

	* doc-view.el: Use (and prefer) soffice as default ODF->PDF
	converter (Bug#13622).
	(doc-view-unoconv-program): Make obsolete alias.
	(doc-view-odf->pdf-converter-program): New variable.
	(doc-view-odf->pdf-converter-function): New variable.
	(doc-view-mode-p): Use it.
	(doc-view-odf->pdf-converter-unoconv):
	Rename from `doc-view-odf->pdf-converter-unoconv'.